# plancktimelib

./: .gitignore  CMakeLists.txt  install.sh  planckclock.c  planckclock.h  test.c
CMake/: FindGMP.cmake
include/: CMakeLists.txt  planckclock.h
src/: CMakeLists.txt  planckclock.c
test/: CMakeLists.txt  test.c
